# systematic-options-strategy-cpp-framework

./: CMakeLists.txt  README.md  main.cpp
config/: strategy_config.json
include/core/: Logger.hpp  MarketData.hpp  OrderManager.hpp  PositionManager.hpp  RiskManager.hpp  Strategy.hpp  YahooMarketData.hpp
include/models/: Greeks.hpp  IVSurface.hpp  Option.hpp
include/pricing/: Pricer.hpp  RoughVolModel.hpp
include/primary/: Logger.hpp  MarketData.hpp  OrderManager.hpp  PositionManager.hpp  RiskManager.hpp  Strategy.hpp
include/utils/: ConfigLoader.hpp  MathUtils.hpp
src/: main.cpp  main.py
src/core/: RiskManager.cpp  YahooMarketData.cpp
src/models/: IVSurface.cpp
src/pricing/: Pricer_BlackScholes.cpp
src/primary/: Greeks.cpp  Logger.cpp  MarketData.cpp  Option.cpp  OrderManager.cpp  PositionManager.cpp  RiskManager.cpp  Strategy.cpp
src/strategies/: IronCondorStrategy.cpp
src/utils/: ConfigLoader.cpp  MathUtils.cpp
strategies/: IronCondorStrategy.cpp  IronCondorStrategy.hpp
